--- a/css/testimonial-nodes.css
+++ b/css/testimonial-nodes.css
@@ -84,7 +84,7 @@
   .node-type-client-image-testimonial .pane-node-field-image-testimonial {
     float: left;
     margin: 1em 1em 0 0;
-    max-width: 480px;
+    width: auto;
   }
 }
 
