Fix admin menu Change layout targeting

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -416,6 +416,10 @@ h2.pane-title {
   background: white;
 }
 
+#admin-menu ul {
+  overflow: initial;
+}
+
 #footer {
   border-top: 3px solid #a7cf38;
   font-size: 10px;
