--- a/sass/pages/testimonial-nodes.scss
+++ b/sass/pages/testimonial-nodes.scss
@@ -58,7 +58,7 @@
 }
 
 .node-type-client-image-testimonial {
-	#content .radix-burr-flipped .col-md-8 {
+	#content .radix-bryant-flipped .col-md-8 {
 		background-color: white;
 		border-color: #cccccc;
 		border-style: solid;
@@ -98,7 +98,7 @@
 }
 
 .node-type-client-video-testimonial {
-	#content .radix-burr-flipped .col-md-8 {
+	#content .radix-bryant-flipped .col-md-8 {
 		background-color: white;
 		border-color: #cccccc;
 		border-style: solid;
