--- a/sass/pages/testimonial-nodes.scss
+++ b/sass/pages/testimonial-nodes.scss
@@ -58,7 +58,7 @@
 }
 
 .node-type-client-image-testimonial {
-	.testimonial-content .radix-layouts-content {
+	#content .radix-bryant-flipped .radix-layouts-content {
 		background-color: white;
 		border-color: #cccccc;
 		border-style: solid;
@@ -98,7 +98,7 @@
 }
 
 .node-type-client-video-testimonial {
-	.testimonial-content .radix-layouts-content {
+	#content .radix-bryant-flipped .radix-layouts-content {
 		background-color: white;
 		border-color: #cccccc;
 		border-style: solid;
