--- a/css/clients.css
+++ b/css/clients.css
@@ -7,4 +7,25 @@
   padding: 1em;
   margin: 0 1em 1em 1em;
 }
+
+.node-type-client .field--name-field-client-site-iframe {
+  border-color: #cccccc;
+  border-style: solid;
+  border-width: 1px;
+}
+
+.node-type-client .field--name-field-client-site-iframe .field-iframe-instance {
+  position: relative;
+  overflow: hidden;
+  padding-top: 133.33%;
+}
+
+.node-type-client .field--name-field-client-site-iframe .field-iframe-instance iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
 /*# sourceMappingURL=clients.css.map */
