--- a/sass/pages/clients.scss
+++ b/sass/pages/clients.scss
@@ -8,4 +8,25 @@
 		padding: 1em;
 		margin: 0 1em 1em 1em;
 	}
+
+	.field--name-field-client-site-iframe {
+		border-color: #cccccc;
+		border-style: solid;
+		border-width: 1px;
+
+		.field-iframe-instance {
+			position: relative;
+			overflow: hidden;
+			padding-top: 133.33%;
+
+			iframe {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				border: 0;
+			}
+		}
+	}
 }
