Fix iframe display

--- a/css/clients.css
+++ b/css/clients.css
@@ -22,7 +22,7 @@
 
 .node-type-client .field--name-field-client-site-iframe .field-iframe-instance iframe {
   position: absolute;
-  top: 0;
+  top: -100%;
   left: 0;
   width: 100%;
   height: 100%;
