--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -905,9 +905,10 @@ legend.collapse-processed a:visited {
   position: relative;
   line-height: 24px;
   border-radius: 5px 5px 0 0;
+  max-width: 200px;
 }
 #superfish-1 li.sf-depth-1.sfHover > ul {
-  top: 37px;
+  top: calc(100% + 5px);
 }
 #superfish-1 a.sf-depth-1 {
   background-color: #e1e1e1;
@@ -916,6 +917,8 @@ legend.collapse-processed a:visited {
   padding: 5px 10px 1px 10px;
   border-radius: 5px 5px 0 0;
   line-height: 24px;
+  box-sizing: border-box;
+  text-align: center;
 }
 #superfish-1 a.sf-depth-1:hover, #superfish-1 a.sf-depth-1.active {
   background-color: #b5ee48;
@@ -954,6 +957,9 @@ ul.sf-menu {
   font-weight: bold;
   text-transform: uppercase;
   font-size: 14px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 @media screen and (min-width: 400px) {
   ul.sf-menu {
