Adjust main menu item heights

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -919,6 +919,7 @@ legend.collapse-processed a:visited {
   line-height: 24px;
   box-sizing: border-box;
   text-align: center;
+  height: 100%;
 }
 #superfish-1 a.sf-depth-1:hover, #superfish-1 a.sf-depth-1.active {
   background-color: #b5ee48;
