--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -39,6 +39,7 @@
     line-height: 24px;
     box-sizing: border-box;
     text-align: center;
+    height: 100%;
 
     &:hover, &.active {
       background-color: #b5ee48;
