--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -889,6 +889,11 @@ legend.collapse-processed a:visited {
   width: 100%;
 }
 
+#superfish-1 {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
 #superfish-1 li a {
   color: #154b70;
   text-decoration: none;
@@ -958,9 +963,6 @@ ul.sf-menu {
   font-weight: bold;
   text-transform: uppercase;
   font-size: 14px;
-  display: flex;
-  align-content: center;
-  justify-content: center;
 }
 @media screen and (min-width: 400px) {
   ul.sf-menu {
