--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -90,9 +90,13 @@
         border-bottom: 3px solid #a7ce38;
         padding: 0;
         background: white;
+        flex-flow: row wrap;
+        width: 300px;
+        right: -300px;
+        z-index: 50;
+        transition: 1s;
 
         &:hover {
-            position: fixed;
             right: 0;
             box-shadow: -5px 5px 20px -3px #383838;
 
@@ -116,6 +120,11 @@
             box-shadow: 2px 2px 30px -3px #383838;
             opacity: 1;
             transition: all 1.5s ease 0.5s;
+        }
+
+        li {
+            flex: 1 100%;
+            max-width: none;
         }
     }
 }
