--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -122,9 +122,12 @@
             transition: all 1.5s ease 0.5s;
         }
 
-        li {
+        li.sf-depth-1 {
             flex: 1 100%;
             max-width: none;
+            border-radius: 0;
+            border-bottom: 1px dotted #e1e1e1;
+            margin: 0;
         }
     }
 }
