--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -111,7 +111,7 @@
             font-family: 'FontAwesome';
             font-size: 24px;
             left: -45px;
-            background: #a6b54c;
+            background: #a7ce38;
             padding: 0.5em;
             box-sizing: border-box;
             top: 0;
@@ -128,6 +128,10 @@
             border-radius: 0;
             border-bottom: 1px dotted #e1e1e1;
             margin: 0;
+
+            a.sf-depth-1 {
+                border-radius: 0;
+            }
         }
     }
 }
