Adjustments to the mobile menu styling

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -960,6 +960,8 @@ legend.collapse-processed a:visited {
 #superfish-1.sticky-menu {
   position: fixed;
   border-bottom: 3px solid #a7ce38;
+  border-left: 3px solid #a7ce38;
+  box-sizing: border-box;
   padding: 0;
   background: white;
   flex-flow: row wrap;
