--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -918,13 +918,15 @@ legend.collapse-processed a:visited {
 #superfish-1 a.sf-depth-1 {
   background-color: #e1e1e1;
   border: none;
-  display: block;
+  display: flex;
   padding: 5px 10px 1px 10px;
   border-radius: 5px 5px 0 0;
   line-height: 24px;
   box-sizing: border-box;
   text-align: center;
   height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 #superfish-1 a.sf-depth-1:hover, #superfish-1 a.sf-depth-1.active {
   background-color: #b5ee48;
