--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -86,8 +86,8 @@
             }
         }
     }
-
-    &.sticky-menu {
+    
+    @include breakpoint(0px 717px) {
         position: fixed;
         border-bottom: 3px solid #a7ce38;
         border-left: 3px solid #a7ce38;
